Project

General

Profile

Actions

Bug #55134

closed

ceph pacific fails to perform fs/mirror test

Added by Aliaksei Makarau about 2 years ago. Updated 9 months ago.

Status:
Resolved
Priority:
Normal
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Tags:
backport_processed
Backport:
quincy, pacific
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
fs
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

During execution of the integration tests (IBM Z, BE) the fs/mirror suite produces a set of error related to segfaults.

Failure Reason:
Test failure: test_cephfs_mirror_peer_bootstrap (tasks.cephfs.test_mirroring.TestMirroring), test_cephfs_mirror_peer_bootstrap (tasks.cephfs.test_mirroring.TestMirroring)

In particular the fs/mirror test produces segfault and the following log produced:

2021-12-23T22:09:22.035 DEBUG:teuthology.orchestra.run.m1306035:> sudo adjust-ulimits ceph-coverage /home/ubuntu/cephtest/archive/coverage timeout 120 ceph --cluster ceph fs snapshot mirror peer_bootstrap
 create backup_fs client.mirror_peer_bootstrap site-remote
2021-12-23T22:09:22.292 INFO:teuthology.orchestra.run.m1306035.stdout:{"token": "eyJmc2lkIjogIjlkMmU2ZTI2LWFlMDYtNGRiNC04YjU0LWVlMWM5ZjQyNDYxMiIsICJmaWxlc3lzdGVtIjogImJhY2t1cF9mcyIsICJ1c2VyIjogImNsaWVudC5
taXJyb3JfcGVlcl9ib290c3RyYXAiLCAic2l0ZV9uYW1lIjogInNpdGUtcmVtb3RlIiwgImtleSI6ICJBUUNDNWNSaGszZThFQkFBTmJpV1FNbk4xTmxucFh4YkQrRWh6QT09IiwgIm1vbl9ob3N0IjogIjE3Mi4xOC4yMzIuMzUifQ=="}
2021-12-23T22:09:22.311 DEBUG:teuthology.orchestra.run.m1306035:> sudo adjust-ulimits ceph-coverage /home/ubuntu/cephtest/archive/coverage timeout 120 ceph --cluster ceph fs snapshot mirror peer_bootstrap
 import cephfs eyJmc2lkIjogIjlkMmU2ZTI2LWFlMDYtNGRiNC04YjU0LWVlMWM5ZjQyNDYxMiIsICJmaWxlc3lzdGVtIjogImJhY2t1cF9mcyIsICJ1c2VyIjogImNsaWVudC5taXJyb3JfcGVlcl9ib290c3RyYXAiLCAic2l0ZV9uYW1lIjogInNpdGUtcmVtb3RlI
iwgImtleSI6ICJBUUNDNWNSaGszZThFQkFBTmJpV1FNbk4xTmxucFh4YkQrRWh6QT09IiwgIm1vbl9ob3N0IjogIjE3Mi4xOC4yMzIuMzUifQ==
2021-12-23T22:09:22.558 INFO:tasks.ceph.mgr.x.m1306035.stderr:2021-12-23T22:09:22.537+0100 3ff7353e900 -1 auth: unable to find a keyring on /etc/ceph/..keyring,/etc/ceph/.keyring,/etc/ceph/keyring,/etc/ce
ph/keyring.bin,: (2) No such file or directory
2021-12-23T22:09:22.599 INFO:tasks.ceph.mgr.x.m1306035.stderr:2021-12-23T22:09:22.587+0100 3ff7353e900 -1 auth: unable to find a keyring on /etc/ceph/..keyring,/etc/ceph/.keyring,/etc/ceph/keyring,/etc/ce
ph/keyring.bin,: (2) No such file or directory
2021-12-23T22:09:22.599 INFO:tasks.ceph.mgr.x.m1306035.stderr:2021-12-23T22:09:22.587+0100 3ff7353e900 -1 auth: unable to find a keyring on /etc/ceph/..keyring,/etc/ceph/.keyring,/etc/ceph/keyring,/etc/ce
ph/keyring.bin,: (2) No such file or directory
2021-12-23T22:09:22.615 INFO:tasks.ceph.mon.a.m1306035.stderr:terminate called after throwing an instance of 'std::out_of_range'
2021-12-23T22:09:22.615 INFO:tasks.ceph.mon.a.m1306035.stderr:  what():  map::at
2021-12-23T22:09:22.615 INFO:tasks.ceph.mon.a.m1306035.stderr:*** Caught signal (Aborted) **
2021-12-23T22:09:22.615 INFO:tasks.ceph.mon.a.m1306035.stderr: in thread 3ff8e9f2900 thread_name:ms_dispatch
2021-12-23T22:09:22.618 INFO:tasks.ceph.mon.a.m1306035.stderr: ceph version 16.2.6-710-geaff0ba3695 (eaff0ba3695f9a68cd1eda6939be4347a55bf703) pacific (stable)
2021-12-23T22:09:22.618 INFO:tasks.ceph.mon.a.m1306035.stderr: 1: [0x3ff8e9edcc6]
2021-12-23T22:09:22.618 INFO:tasks.ceph.mon.a.m1306035.stderr: 2: gsignal()
2021-12-23T22:09:22.619 INFO:tasks.ceph.mon.a.m1306035.stderr: 3: abort()
2021-12-23T22:09:22.619 INFO:tasks.ceph.mon.a.m1306035.stderr: 4: (__gnu_cxx::__verbose_terminate_handler()+0x118) [0x3ff982bb270]
2021-12-23T22:09:22.619 INFO:tasks.ceph.mon.a.m1306035.stderr: 5: /lib/s390x-linux-gnu/libstdc++.so.6(+0xb8b7e) [0x3ff982b8b7e]
2021-12-23T22:09:22.619 INFO:tasks.ceph.mon.a.m1306035.stderr: 6: /lib/s390x-linux-gnu/libstdc++.so.6(+0xb8bf8) [0x3ff982b8bf8]
2021-12-23T22:09:22.619 INFO:tasks.ceph.mon.a.m1306035.stderr: 7: /lib/s390x-linux-gnu/libstdc++.so.6(+0xb8f0e) [0x3ff982b8f0e]
2021-12-23T22:09:22.619 INFO:tasks.ceph.mon.a.m1306035.stderr: 8: (std::__throw_out_of_range(char const*)+0x4c) [0x3ff982aa6ac]
2021-12-23T22:09:22.619 INFO:tasks.ceph.mon.a.m1306035.stderr: 9: (MDSMonitor::check_sub(Subscription*)+0x198c) [0x2aa14e606f4]
2021-12-23T22:09:22.619 INFO:tasks.ceph.mon.a.m1306035.stderr: 10: (Monitor::handle_subscribe(boost::intrusive_ptr<MonOpRequest>)+0x13ec) [0x2aa14bf5314]
2021-12-23T22:09:22.619 INFO:tasks.ceph.mon.a.m1306035.stderr: 11: (Monitor::dispatch_op(boost::intrusive_ptr<MonOpRequest>)+0x680) [0x2aa14c27d48]
2021-12-23T22:09:22.619 INFO:tasks.ceph.mon.a.m1306035.stderr: 12: (Monitor::_ms_dispatch(Message*)+0x34e) [0x2aa14c28ebe]
2021-12-23T22:09:22.619 INFO:tasks.ceph.mon.a.m1306035.stderr: 13: (Dispatcher::ms_dispatch2(boost::intrusive_ptr<Message> const&)+0x82) [0x2aa14c647ca]
2021-12-23T22:09:22.620 INFO:tasks.ceph.mon.a.m1306035.stderr: 14: (Messenger::ms_deliver_dispatch(boost::intrusive_ptr<Message> const&)+0x484) [0x3ff98cb5d14]
2021-12-23T22:09:22.620 INFO:tasks.ceph.mon.a.m1306035.stderr: 15: (DispatchQueue::entry()+0x53c) [0x3ff98cb332c]
2021-12-23T22:09:22.620 INFO:tasks.ceph.mon.a.m1306035.stderr: 16: (DispatchQueue::DispatchThread::entry()+0x18) [0x3ff98d7bd98]
2021-12-23T22:09:22.620 INFO:tasks.ceph.mon.a.m1306035.stderr: 17: /lib/s390x-linux-gnu/libpthread.so.0(+0x9986) [0x3ff98509986]
2021-12-23T22:09:22.620 INFO:tasks.ceph.mon.a.m1306035.stderr: 18: /lib/s390x-linux-gnu/libc.so.6(+0x103cc6) [0x3ff97f83cc6]
2021-12-23T22:09:22.620 INFO:tasks.ceph.mon.a.m1306035.stderr: 19: [(nil)]
2021-12-23T22:09:22.620 INFO:tasks.ceph.mon.a.m1306035.stderr:2021-12-23T22:09:22.607+0100 3ff8e9f2900 -1 *** Caught signal (Aborted) **
2021-12-23T22:09:22.621 INFO:tasks.ceph.mon.a.m1306035.stderr: in thread 3ff8e9f2900 thread_name:ms_dispatch
2021-12-23T22:09:22.621 INFO:tasks.ceph.mon.a.m1306035.stderr:
2021-12-23T22:09:22.621 INFO:tasks.ceph.mon.a.m1306035.stderr: ceph version 16.2.6-710-geaff0ba3695 (eaff0ba3695f9a68cd1eda6939be4347a55bf703) pacific (stable)
2021-12-23T22:09:22.621 INFO:tasks.ceph.mon.a.m1306035.stderr: 1: [0x3ff8e9edcc6]
2021-12-23T22:09:22.621 INFO:tasks.ceph.mon.a.m1306035.stderr: 2: gsignal()
2021-12-23T22:09:22.621 INFO:tasks.ceph.mon.a.m1306035.stderr: 3: abort()
2021-12-23T22:09:22.621 INFO:tasks.ceph.mon.a.m1306035.stderr: 4: (__gnu_cxx::__verbose_terminate_handler()+0x118) [0x3ff982bb270]
2021-12-23T22:09:22.621 INFO:tasks.ceph.mon.a.m1306035.stderr: 5: /lib/s390x-linux-gnu/libstdc++.so.6(+0xb8b7e) [0x3ff982b8b7e]
2021-12-23T22:09:22.621 INFO:tasks.ceph.mon.a.m1306035.stderr: 6: /lib/s390x-linux-gnu/libstdc++.so.6(+0xb8bf8) [0x3ff982b8bf8]
2021-12-23T22:09:22.621 INFO:tasks.ceph.mon.a.m1306035.stderr: 7: /lib/s390x-linux-gnu/libstdc++.so.6(+0xb8f0e) [0x3ff982b8f0e]
2021-12-23T22:09:22.621 INFO:tasks.ceph.mon.a.m1306035.stderr: 8: (std::__throw_out_of_range(char const*)+0x4c) [0x3ff982aa6ac]
2021-12-23T22:09:22.621 INFO:tasks.ceph.mon.a.m1306035.stderr: 9: (MDSMonitor::check_sub(Subscription*)+0x198c) [0x2aa14e606f4]
2021-12-23T22:09:22.622 INFO:tasks.ceph.mon.a.m1306035.stderr: 10: (Monitor::handle_subscribe(boost::intrusive_ptr<MonOpRequest>)+0x13ec) [0x2aa14bf5314]
2021-12-23T22:09:22.622 INFO:tasks.ceph.mon.a.m1306035.stderr: 11: (Monitor::dispatch_op(boost::intrusive_ptr<MonOpRequest>)+0x680) [0x2aa14c27d48]
2021-12-23T22:09:22.622 INFO:tasks.ceph.mon.a.m1306035.stderr: 12: (Monitor::_ms_dispatch(Message*)+0x34e) [0x2aa14c28ebe]
2021-12-23T22:09:22.622 INFO:tasks.ceph.mon.a.m1306035.stderr: 13: (Dispatcher::ms_dispatch2(boost::intrusive_ptr<Message> const&)+0x82) [0x2aa14c647ca]
2021-12-23T22:09:22.622 INFO:tasks.ceph.mon.a.m1306035.stderr: 14: (Messenger::ms_deliver_dispatch(boost::intrusive_ptr<Message> const&)+0x484) [0x3ff98cb5d14]
2021-12-23T22:09:22.622 INFO:tasks.ceph.mon.a.m1306035.stderr: 15: (DispatchQueue::entry()+0x53c) [0x3ff98cb332c]
2021-12-23T22:09:22.622 INFO:tasks.ceph.mon.a.m1306035.stderr: 16: (DispatchQueue::DispatchThread::entry()+0x18) [0x3ff98d7bd98]
2021-12-23T22:09:22.622 INFO:tasks.ceph.mon.a.m1306035.stderr: 17: /lib/s390x-linux-gnu/libpthread.so.0(+0x9986) [0x3ff98509986]
2021-12-23T22:09:22.622 INFO:tasks.ceph.mon.a.m1306035.stderr: 18: /lib/s390x-linux-gnu/libc.so.6(+0x103cc6) [0x3ff97f83cc6]
2021-12-23T22:09:22.622 INFO:tasks.ceph.mon.a.m1306035.stderr: 19: [(nil)]
2021-12-23T22:09:22.622 INFO:tasks.ceph.mon.a.m1306035.stderr: NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
2021-12-23T22:09:22.622 INFO:tasks.ceph.mon.a.m1306035.stderr:
2021-12-23T22:09:22.639 INFO:tasks.ceph.mon.a.m1306035.stderr:     0> 2021-12-23T22:09:22.607+0100 3ff8e9f2900 -1 *** Caught signal (Aborted) **
2021-12-23T22:09:22.639 INFO:tasks.ceph.mon.a.m1306035.stderr: in thread 3ff8e9f2900 thread_name:ms_dispatch
2021-12-23T22:09:22.639 INFO:tasks.ceph.mon.a.m1306035.stderr:
2021-12-23T22:09:22.639 INFO:tasks.ceph.mon.a.m1306035.stderr: ceph version 16.2.6-710-geaff0ba3695 (eaff0ba3695f9a68cd1eda6939be4347a55bf703) pacific (stable)
2021-12-23T22:09:22.639 INFO:tasks.ceph.mon.a.m1306035.stderr: 1: [0x3ff8e9edcc6]
2021-12-23T22:09:22.639 INFO:tasks.ceph.mon.a.m1306035.stderr: 2: gsignal()
2021-12-23T22:09:22.639 INFO:tasks.ceph.mon.a.m1306035.stderr: 3: abort()
2021-12-23T22:09:22.639 INFO:tasks.ceph.mon.a.m1306035.stderr: 4: (__gnu_cxx::__verbose_terminate_handler()+0x118) [0x3ff982bb270]
2021-12-23T22:09:22.639 INFO:tasks.ceph.mon.a.m1306035.stderr: 5: /lib/s390x-linux-gnu/libstdc++.so.6(+0xb8b7e) [0x3ff982b8b7e]
2021-12-23T22:09:22.640 INFO:tasks.ceph.mon.a.m1306035.stderr: 6: /lib/s390x-linux-gnu/libstdc++.so.6(+0xb8bf8) [0x3ff982b8bf8]
2021-12-23T22:09:22.640 INFO:tasks.ceph.mon.a.m1306035.stderr: 7: /lib/s390x-linux-gnu/libstdc++.so.6(+0xb8f0e) [0x3ff982b8f0e]
2021-12-23T22:09:22.640 INFO:tasks.ceph.mon.a.m1306035.stderr: 8: (std::__throw_out_of_range(char const*)+0x4c) [0x3ff982aa6ac]
2021-12-23T22:09:22.640 INFO:tasks.ceph.mon.a.m1306035.stderr: 9: (MDSMonitor::check_sub(Subscription*)+0x198c) [0x2aa14e606f4]
2021-12-23T22:09:22.640 INFO:tasks.ceph.mon.a.m1306035.stderr: 10: (Monitor::handle_subscribe(boost::intrusive_ptr<MonOpRequest>)+0x13ec) [0x2aa14bf5314]
2021-12-23T22:09:22.640 INFO:tasks.ceph.mon.a.m1306035.stderr: 11: (Monitor::dispatch_op(boost::intrusive_ptr<MonOpRequest>)+0x680) [0x2aa14c27d48]
2021-12-23T22:09:22.640 INFO:tasks.ceph.mon.a.m1306035.stderr: 12: (Monitor::_ms_dispatch(Message*)+0x34e) [0x2aa14c28ebe]
2021-12-23T22:09:22.640 INFO:tasks.ceph.mon.a.m1306035.stderr: 13: (Dispatcher::ms_dispatch2(boost::intrusive_ptr<Message> const&)+0x82) [0x2aa14c647ca]
2021-12-23T22:09:22.640 INFO:tasks.ceph.mon.a.m1306035.stderr: 14: (Messenger::ms_deliver_dispatch(boost::intrusive_ptr<Message> const&)+0x484) [0x3ff98cb5d14]
2021-12-23T22:09:22.640 INFO:tasks.ceph.mon.a.m1306035.stderr: 15: (DispatchQueue::entry()+0x53c) [0x3ff98cb332c]
2021-12-23T22:09:22.640 INFO:tasks.ceph.mon.a.m1306035.stderr: 16: (DispatchQueue::DispatchThread::entry()+0x18) [0x3ff98d7bd98]
2021-12-23T22:09:22.640 INFO:tasks.ceph.mon.a.m1306035.stderr: 17: /lib/s390x-linux-gnu/libpthread.so.0(+0x9986) [0x3ff98509986]
2021-12-23T22:09:22.641 INFO:tasks.ceph.mon.a.m1306035.stderr: 18: /lib/s390x-linux-gnu/libc.so.6(+0x103cc6) [0x3ff97f83cc6]
2021-12-23T22:09:22.641 INFO:tasks.ceph.mon.a.m1306035.stderr: 19: [(nil)]
2021-12-23T22:09:22.641 INFO:tasks.ceph.mon.a.m1306035.stderr: NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
2021-12-23T22:09:22.641 INFO:tasks.ceph.mon.a.m1306035.stderr:
2021-12-23T22:09:22.655 INFO:tasks.ceph.mon.a.m1306035.stderr:     0> 2021-12-23T22:09:22.607+0100 3ff8e9f2900 -1 *** Caught signal (Aborted) **
2021-12-23T22:09:22.655 INFO:tasks.ceph.mon.a.m1306035.stderr: in thread 3ff8e9f2900 thread_name:ms_dispatch
2021-12-23T22:09:22.655 INFO:tasks.ceph.mon.a.m1306035.stderr:
2021-12-23T22:09:22.655 INFO:tasks.ceph.mon.a.m1306035.stderr: ceph version 16.2.6-710-geaff0ba3695 (eaff0ba3695f9a68cd1eda6939be4347a55bf703) pacific (stable)
2021-12-23T22:09:22.655 INFO:tasks.ceph.mon.a.m1306035.stderr: 1: [0x3ff8e9edcc6]
2021-12-23T22:09:22.655 INFO:tasks.ceph.mon.a.m1306035.stderr: 2: gsignal()
2021-12-23T22:09:22.655 INFO:tasks.ceph.mon.a.m1306035.stderr: 3: abort()
2021-12-23T22:09:22.655 INFO:tasks.ceph.mon.a.m1306035.stderr: 4: (__gnu_cxx::__verbose_terminate_handler()+0x118) [0x3ff982bb270]
2021-12-23T22:09:22.655 INFO:tasks.ceph.mon.a.m1306035.stderr: 5: /lib/s390x-linux-gnu/libstdc++.so.6(+0xb8b7e) [0x3ff982b8b7e]
2021-12-23T22:09:22.656 INFO:tasks.ceph.mon.a.m1306035.stderr: 6: /lib/s390x-linux-gnu/libstdc++.so.6(+0xb8bf8) [0x3ff982b8bf8]
2021-12-23T22:09:22.656 INFO:tasks.ceph.mon.a.m1306035.stderr: 7: /lib/s390x-linux-gnu/libstdc++.so.6(+0xb8f0e) [0x3ff982b8f0e]
2021-12-23T22:09:22.656 INFO:tasks.ceph.mon.a.m1306035.stderr: 8: (std::__throw_out_of_range(char const*)+0x4c) [0x3ff982aa6ac]
2021-12-23T22:09:22.656 INFO:tasks.ceph.mon.a.m1306035.stderr: 9: (MDSMonitor::check_sub(Subscription*)+0x198c) [0x2aa14e606f4]
2021-12-23T22:09:22.656 INFO:tasks.ceph.mon.a.m1306035.stderr: 10: (Monitor::handle_subscribe(boost::intrusive_ptr<MonOpRequest>)+0x13ec) [0x2aa14bf5314]
2021-12-23T22:09:22.656 INFO:tasks.ceph.mon.a.m1306035.stderr: 11: (Monitor::dispatch_op(boost::intrusive_ptr<MonOpRequest>)+0x680) [0x2aa14c27d48]
2021-12-23T22:09:22.656 INFO:tasks.ceph.mon.a.m1306035.stderr: 12: (Monitor::_ms_dispatch(Message*)+0x34e) [0x2aa14c28ebe]
2021-12-23T22:09:22.656 INFO:tasks.ceph.mon.a.m1306035.stderr: 13: (Dispatcher::ms_dispatch2(boost::intrusive_ptr<Message> const&)+0x82) [0x2aa14c647ca]
2021-12-23T22:09:22.656 INFO:tasks.ceph.mon.a.m1306035.stderr: 14: (Messenger::ms_deliver_dispatch(boost::intrusive_ptr<Message> const&)+0x484) [0x3ff98cb5d14]
2021-12-23T22:09:22.656 INFO:tasks.ceph.mon.a.m1306035.stderr: 15: (DispatchQueue::entry()+0x53c) [0x3ff98cb332c]
2021-12-23T22:09:22.656 INFO:tasks.ceph.mon.a.m1306035.stderr: 16: (DispatchQueue::DispatchThread::entry()+0x18) [0x3ff98d7bd98]
2021-12-23T22:09:22.656 INFO:tasks.ceph.mon.a.m1306035.stderr: 17: /lib/s390x-linux-gnu/libpthread.so.0(+0x9986) [0x3ff98509986]
2021-12-23T22:09:22.657 INFO:tasks.ceph.mon.a.m1306035.stderr: 18: /lib/s390x-linux-gnu/libc.so.6(+0x103cc6) [0x3ff97f83cc6]
2021-12-23T22:09:22.657 INFO:tasks.ceph.mon.a.m1306035.stderr: 19: [(nil)]
2021-12-23T22:09:22.657 INFO:tasks.ceph.mon.a.m1306035.stderr: NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
2021-12-23T22:09:22.657 INFO:tasks.ceph.mon.a.m1306035.stderr:
2021-12-23T22:09:23.221 INFO:tasks.ceph.mon.a.m1306035.stderr:daemon-helper: command crashed with signal 6
2021-12-23T22:09:23.723 DEBUG:teuthology.orchestra.run.m1306035:> sudo logrotate /etc/logrotate.d/ceph-test.conf
2021-12-23T22:09:28.765 INFO:tasks.daemonwatchdog.daemon_watchdog:daemon ceph.mon.a is failed for ~0s
2021-12-23T22:09:34.673 INFO:tasks.daemonwatchdog.daemon_watchdog:daemon ceph.mon.a is failed for ~6s


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #57193: quincy: ceph pacific fails to perform fs/mirror testResolvedVenky ShankarActions
Copied to CephFS - Backport #57194: pacific: ceph pacific fails to perform fs/mirror testResolvedVenky ShankarActions
Actions #1

Updated by Laura Flores about 2 years ago

  • Affected Versions v16.2.6 added
Actions #2

Updated by Laura Flores about 2 years ago

  • Backport set to quincy, pacific
Actions #3

Updated by Laura Flores about 2 years ago

  • Pull request ID set to 45757
Actions #4

Updated by Venky Shankar about 2 years ago

  • Project changed from Ceph to CephFS
  • Category set to Correctness/Safety
  • Status changed from New to Fix Under Review
  • Assignee set to Aliaksei Makarau
  • Target version set to v18.0.0
Actions #5

Updated by Rishabh Dave about 2 years ago

  • Pull request ID changed from 45757 to 45758
Actions #6

Updated by Rishabh Dave about 2 years ago

  • Pull request ID changed from 45758 to 45778
Actions #7

Updated by Dhairya Parmar almost 2 years ago

  • Pull request ID changed from 45778 to 46749
Actions #8

Updated by Rishabh Dave over 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #9

Updated by Backport Bot over 1 year ago

  • Copied to Backport #57193: quincy: ceph pacific fails to perform fs/mirror test added
Actions #10

Updated by Backport Bot over 1 year ago

  • Copied to Backport #57194: pacific: ceph pacific fails to perform fs/mirror test added
Actions #11

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #12

Updated by Konstantin Shalygin 9 months ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF