Monitor/FSMap: fails to perform fs/mirror

Segfault was triggered by the fs/mirror test.
The problem is in potential undefined behaviour
after erasing element and iterator invalidation in
FSMap::filter().
Fixed by explicit iterator increment.

Fixes: https://tracker.ceph.com/issues/55134

Signed-off-by: Aliaksei Makarau <aliaksei.makarau@ibm.com>